# OpenGLMaster

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenGLV2024.cpp  README.md
OpenGLV2024/: CMakeLists.txt  OpenGLV2024.cpp  OpenGLV2024.h
core/: Actor.cpp  Actor.h  Application.cpp  Application.h  Component.h  Scene.cpp  Scene.h  SceneGraph.h  Tag.h  Transform.h  Window.cpp  Window.h
